--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width,
     initial-scale=1.0">
     <title>
-      ¡Hola, Marines!
+      ¡Hola, Arturo!
     </title>
   </head>
-  <body>
+ <body style="background-color:powderblue;">
     <h1>
       ¡Bienvenid@! ¿Qué vas a aprender hoy?
     </h1>
@@ -19,6 +19,6 @@
        <li><a href="https://linkedin.com" target="_blank">LinkedIn</a></li>
        <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
     </ul>
-    
+    <img src="https://i.ibb.co/chv7Jw9z/t8q-Xd3-Q-3.png" alt="A beautiful landscape">
   </body>
 </html>
